<resources>
    <string name="app_name">Appikceria</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_62">+62</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="kode_otp">Kode OTP</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_kode_otp">Masukkan Kode OTP</string>
    <string name="title_activity_beranda">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="riwayat">Riwayat</string>
    <string name="penyakit">Penyakit</string>
    <string name="informasi">Informasi</string>
    <string name="informasi_umum">Informasi Umum</string>
    <string name="profil">Profil</string>
    <string name="beranda">Beranda</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="survei_kepuasan_home">Survei Kepuasan Masyarakat</string>
    <string name="keluhan_penyakit_home">Keluhan Penyakit Ikan</string>
    <string name="pengajuan_pkl_home">Pengajuan Praktik Kerja Lapangan (PKL)</string>
    <string name="pengaduan_layanan_home">Pengaduan Layanan Karantina Ikan</string>
    <string name="survei_kepuasan">Survei Kepuasan</string>
    <string name="keluhan_penyakit">Keluhan Penyakit</string>
    <string name="pengajuan_pkl">Pengajuan PKL</string>
    <string name="registrasi">Registrasi</string>
    <string name="pengaduan_layanan">Pengaduan Layanan</string>
    <string name="logo">logo</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="menu">Menu</string>
    <string name="jenis_komoditas">Jenis Komoditas</string>
    <string name="tanggal">Tanggal</string>
    <string name="status">Status</string>
    <string name="bidang_layanan">Bidang Layanan</string>
    <string name="diajukan_pada">Diajukan pada</string>
    <string name="instansi">Instansi</string>
    <string name="survei_disubmit_pada">Survei disubmit pada</string>
    <string name="pukul">Pukul</string>
    <string name="profil_balai_kipm_nlampung">Profil Balai KIPM\nLampung</string>
    <string name="kegiatan_noperasional">Kegiatan\nOperasional</string>
    <string name="data_nkepegawaian">Data\nKepegawaian</string>
    <string name="data_kepegawaian">Data Kepegawaian</string>
    <string name="alamat">Alamat</string>
    <string name="tentang">Tentang</string>
    <string name="keluar">Keluar</string>
    <string name="luas_total_lahan_budidaya">Luas total lahan budidaya</string>
    <string name="luas_yang_terkena_penyakit">Luas yang terkena penyakit</string>
    <string name="jenis_komoditas1">Jenis komoditas</string>
    <string name="gejala_klinis">Gejala klinis</string>
    <string name="jumlah_kematian">Persentase jumlah kematian</string>
    <string name="tanggal_mulai_terjangkit">Tanggal mulai terjangkit</string>
    <string name="pilih_foto">Ambil foto ikan</string>
    <string name="submit">Submit</string>
    <string name="bukti_foto">Tambahkan bukti foto</string>
    <string name="jenis_pengaduan">Jenis pengaduan</string>
    <string name="bidang_pengaduan">Bidang pengaduan</string>
    <string name="tujuan_pengaduan">Tujuan pengaduan</string>
    <string name="sumber_informasi">Sumber informasi</string>
    <string name="ada_dokumen_pendukung">Ada dokumen pendukung</string>
    <string name="isi_aduan">Isi aduan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="s1">S1</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="sd">SD</string>
    <string name="pns">PNS</string>
    <string name="tni">TNI</string>
    <string name="polri">Polri</string>
    <string name="swasta">Swasta</string>
    <string name="wirausaha">Wirausaha</string>
    <string name="lainnya">Lainnya</string>
    <string name="usia">Usia</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="tempat_lahir">Tempat lahir</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="sekolah_universitas">Sekolah/Universitas</string>
    <string name="jurusan">Jurusan</string>
    <string name="surat_pengantar">Surat pengantar</string>
    <string name="suvei_1">Apakah Anda/Badan hukum/Organisasi dapat memahami persyaratan pelayanan yang tersedia di unit kami?</string>
    <string name="suvei_2">Apakah sistem, mekanisme dan prosedur pelayanan yang tersedia mudah dipahami?</string>
    <string name="suvei_3">Apakah waktu pelayanan sesuai dengan janji layanan?</string>
    <string name="suvei_4">Bagaimana kejelasan informasi tentang biaya/tarif dalam pelayanan?</string>
    <string name="suvei_5">Apakah produk pelayanan yang diberikan dan diterima telah sesuai dengan ketentuan?</string>
    <string name="suvei_6">Bagaimana kompetensi personil dalam memberikan layanan?</string>
    <string name="suvei_7">Bagaimana sikap petugas dalam memberikan pelayanan?</string>
    <string name="suvei_8">Apakah penanganan pengaduan dan tindak lanjut pengaduan atau keluhan pelanggan telah dilaksanakan dengan baik?</string>
    <string name="suvei_9">Bagaimana fasilitas pelayanan yang tersedia?</string>
    <string name="jawaban">Jawaban</string>
    <string name="sertifikasi_karantina_ikan_dan_mutu_hasil_perikanan">Sertifikasi Karantina Ikan dan Mutu Hasil Perikanan</string>
    <string name="jenis_layanan">Jenis layanan</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="_1">1. </string>
    <string name="_2">2. </string>
    <string name="_3">3. </string>
    <string name="_4">4. </string>
    <string name="_5">5. </string>
    <string name="_6">6. </string>
    <string name="_7">7. </string>
    <string name="_8">8. </string>
    <string name="_9">9. </string>
    <string name="identitas_diri">Identitas Diri</string>
    <string name="pendapat_responden">Pendapat Responden</string>
    <string name="foto_data_penyakit">Foto data penyakit</string>
    <string name="icon">icon</string>
    <string name="data_penyakit">Data Penyakit</string>
    <string name="detail_data_penyakit">Detail data penyakit</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="sejarah">Sejarah</string>
    <string name="struktur_organisasi">Struktur organisasi</string>
    <string name="lalu_lintas">Lalu lintas</string>
    <string name="laboratorium">Laboratorium</string>
    <string name="data_kosong">Data kosong</string>
    <string name="gejala">Gejala</string>
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="mulai">Mulai</string>
    <string name="fitur_utama_appik_ceria">Fitur Utama</string>
    <string name="fitur">Fitur</string>
    <string name="prefix_indonesia">+62</string>
    <string name="harus_diisi">Harus diisi!</string>
    <string name="nomor_telepon_salah">Nomor telepon tidak diawali dengan 0, contoh +62821…!</string>
    <string name="harus_dipilih">Harus dipilih!</string>
    <string name="email_tidak_valid">Email tidak valid!</string>
    <string name="close">close</string>
    <string name="verifikasi_nomor_telepon">Verifikasi nomor telepon</string>
    <string name="timer">Timer</string>
    <string name="kirim_ulang_kode">Kirim ulang kode</string>
    <string name="kode_terkirim">Kode terkirim</string>
    <string name="impor">Impor</string>
    <string name="ekspor">Ekspor</string>
    <string name="domestik">Domestik</string>
    <string name="judul">Judul</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="tahun_lowercase">tahun</string>
    <string name="terjadi_kesalahan">Terjadi kesalahan</string>
    <string name="server_error">Server error atau periksa sambungan internet</string>
    <string name="bantuan">Bantuan</string>
    <string name="kebijakan_privasi">\ Kebijakan Privasi</string>
    <string name="dan">\ dan</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="text_login">Dengan masuk atau mendaftar berarti anda menyetujui</string>
    <string name="snk">snk</string>
    <string name="kp">kp</string>
    <string name="pilihan">pilihan</string>
    <string name="metode_pengujian">Metode pengujian</string>
    <string name="januari">Januari</string>
    <string name="februari">Februari</string>
    <string name="desember">Desember</string>
    <string name="november">November</string>
    <string name="oktober">Oktober</string>
    <string name="september">September</string>
    <string name="agustus">Agustus</string>
    <string name="juli">Juli</string>
    <string name="juni">Juni</string>
    <string name="mei">Mei</string>
    <string name="april">April</string>
    <string name="maret">Maret</string>
    <string name="semua">Semua</string>
    <string name="sangat_mudah">4. Sangat mudah</string>
    <string name="mudah">3. Mudah</string>
    <string name="kurang_mudah">2. Kurang mudah</string>
    <string name="tidak_mudah">1. Tidak mudah</string>
    <string name="tidak_cepat">1. Tidak cepat</string>
    <string name="kurang_cepat">2. Kurang cepat</string>
    <string name="cepat">3. Cepat</string>
    <string name="sangat_cepat">4. Sangat cepat</string>
    <string name="sangat_mahal">1. Sangat mahal</string>
    <string name="cukup_mahal">2. Cukup mahal</string>
    <string name="murah">3. Murah</string>
    <string name="gratis">4. Gratis</string>
    <string name="tidak_sesuai">1. Tidak sesuai</string>
    <string name="kurang_sesuai">2. Kurang sesuai</string>
    <string name="sesuai">3. Sesuai</string>
    <string name="sangat_sesuai">4. Sangat sesuai</string>
    <string name="tidak_kompeten">1. Tidak kompeten</string>
    <string name="kurang_kompeten">2. Kurang kompeten</string>
    <string name="kompeten">3. Kompeten</string>
    <string name="sangat_kompeten">4. Sangat kompeten</string>
    <string name="tidak_sopan_dan_ramah">1. Tidak sopan dan ramah</string>
    <string name="kurang_sopan_dan_ramah">2. Kurang sopan dan ramah</string>
    <string name="sopan_dan_ramah">3. Sopan dan ramah</string>
    <string name="sangat_sopan_dan_ramah">4. Sangat sopan dan ramah</string>
    <string name="buruk">1. Buruk</string>
    <string name="cukup">2. Cukup</string>
    <string name="baik">3. Baik</string>
    <string name="sangat_baik">4. Sangat baik</string>
    <string name="tidak_ada">1. Tidak ada</string>
    <string name="ada_tetapi_tidak_berfungsi">2. Ada tetapi tidak berfungsi</string>
    <string name="berfungsi_kurang_maksimal">3. Berfungsi kurang maksimal</string>
    <string name="dikelola_dengan_baik">4. Dikelola dengan baik</string>
    <string name="pilih">Pilih</string>
    <string name="nama_metode">Nama metode</string>
    <string name="nama_penyakit">Nama penyakit</string>
    <string name="berita">Berita\n</string>
    <string name="pegawai_teladan">Pegawai teladan</string>
    <string name="data_pegawai">Data pegawai</string>
    <string name="kegiatan_kepegawaian">Kegiatan kepegawaian</string>
    <string name="nip">NIP</string>
    <string name="jabatan">Jabatan</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="izin_disetujui">Izin disetujui</string>
    <string name="foto">Foto</string>
    <string name="keterangan">Keterangan</string>
    <string name="download_berkas">Download Berkas</string>
    <string name="lokasi_budidaya">Lokasi budidaya</string>
    <string name="hektar">hektar</string>
    <string name="persen">%</string>
    <string name="penjelasan_jumlah_total">* Dari jumlah keseluruhan bibit</string>
</resources>