<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/beranda"/>

    <item
        android:id="@+id/navigation_riwayat"
        android:icon="@drawable/ic_history"
        android:title="@string/riwayat"/>

    <item
        android:id="@+id/navigation_penyakit"
        android:icon="@drawable/ic_storage"
        android:title="@string/penyakit"/>

    <item
        android:id="@+id/navigation_informasi"
        android:icon="@drawable/ic_account_balance"
        android:title="@string/informasi"/>

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_baseline_person"
        android:title="@string/profil"/>

</menu>