<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bkipmlampung.appikceria.ui.home.HomeFragment"
        android:label="@string/beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.bkipmlampung.appikceria.ui.riwayat.RiwayatFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_penyakit"
        android:name="com.bkipmlampung.appikceria.ui.penyakit.PenyakitFragment"
        android:label="@string/penyakit"
        tools:layout="@layout/fragment_penyakit" />

    <fragment
        android:id="@+id/navigation_informasi"
        android:name="com.bkipmlampung.appikceria.ui.informasi.InformasiFragment"
        android:label="@string/informasi"
        tools:layout="@layout/fragment_informasi" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.bkipmlampung.appikceria.ui.profil.ProfilFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profil" />
</navigation>