<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_center">

    <ImageView
        android:id="@+id/iv_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_gravity="end"
        android:padding="@dimen/padding_normal"
        android:contentDescription="@string/close" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_check_circle" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/status"
                android:layout_marginBottom="@dimen/padding_normal"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nomor_telepon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_telepon"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat"
                    android:textColor="@color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_jenis_komoditas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jenis_komoditas1"
                    android:textColor="@color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle"
                app:suffixText="@string/hektar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_luas_total_lahan_budidaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/luas_total_lahan_budidaya"
                    android:textColor="@color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle"
                app:suffixText="@string/hektar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_luas_yang_terkena_penyakit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/luas_yang_terkena_penyakit"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_gejala_klinis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gejala_klinis"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle"
                app:suffixText="@string/persen"
                app:helperText="@string/penjelasan_jumlah_total">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_jumlah_kematian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jumlah_kematian"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tanggal_mulai_terjangkit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tanggal_mulai_terjangkit"
                    android:textColor="@color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lokasi_budidaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lokasi_budidaya"
                    android:textColor="@color/black"
                    android:enabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keterangan"
                    android:textColor="@color/black"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="0dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/radius_card"
                app:cardElevation="0dp"
                android:layout_marginBottom="@dimen/margin_middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_view_lampiran"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="#939090"
                        android:src="@drawable/fish"
                        android:contentDescription="@string/icon" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_berkas"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>