<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/cv_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/radius_card"
    android:elevation="@dimen/zero"
    app:cardElevation="@dimen/zero"
    android:layout_margin="@dimen/margin_little">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/width_foto_medium"
            android:layout_height="@dimen/height_foto_medium"
            android:src="@drawable/ic_image"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/foto" />

        <TextView
            android:id="@+id/et_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:layout_margin="@dimen/margin_little"
            android:textSize="@dimen/size_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/et_waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:layout_margin="@dimen/margin_little"
            android:textSize="@dimen/size_desc_bantuan"/>

        <TextView
            android:id="@+id/et_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:layout_margin="@dimen/margin_little"
            android:textSize="@dimen/size_desc_bantuan"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>